ASan is strange...

--- a/projects/lot-of-code/CMakeLists.txt
+++ b/projects/lot-of-code/CMakeLists.txt
@@ -4,26 +4,23 @@
 # -DCMAKE_BUILD_TYPE=Debug
 # -DCMAKE_VERBOSE_MAKEFILE=ON -DCMAKE_C_COMPILER=/usr/bin/clang -DCMAKE_CXX_COMPILER=/usr/bin/clang++
 
-project(cc-space)
+project(lot-of-space)
 cmake_minimum_required(VERSION 2.8)
 
 #Message(${CMAKE_CURRENT_LIST_DIR})
 
 #
 
-set(Extern "./extern/")
-set(GMock "./extern/gmock-1.6.0/fused-src")
+set(Extern "../../extern/")
+set(GMock "../../extern/gmock-1.6.0/fused-src")
 set(Canary "./source/canary/")
 set(Pro "./source/production/")
 set(unitTests "./tests/unit/")
 set(Source "source/")
 set(testsRoot "./tests")
 set(root ".")
-
-#set(BigExtern "D:/work/big-3rdparty/")
-set(BigExtern "/home/zaqwes/big-3rdparty/")
-
-set(Intern "./intern/")
+set(BigExtern "/opt/big-3rdparty/")
+set(Intern "../../intern/")
 
 # Test framework
 include_directories(${GMock})
@@ -77,31 +74,6 @@ elseif (UNIX)
   # http://llvm.org/docs/GettingStarted.html#getting-a-modern-host-c-toolchain
 
   if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-    # Static analyser http://clang-analyzer.llvm.org/
-    # https://github.com/couchbase/couchnode/blob/master/deps/lcb/cmake/Modules/GetLibcouchbaseFlags.cmake
-    # http://blogs.perl.org/users/rurban/2011/11/adventures-with-clang-and-asan.html
-    #IF(LCB_USE_ASAN)
-      # main: address - thread, memory and ub not work in i686, only x86_64
-      #-fno-omit-frame-pointer -O1
-      SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g  -fsanitize=address")
-      #-fno-omit-frame-pointer -O1
-      SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -g  -fsanitize=address")
-      # -undefined dynamic_lookup
-        SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS}  -fsanitize=address")
-        SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
-    #ENDIF()
-    # TOOLS:
-    #
-    # https://code.google.com/p/address-sanitizer/wiki/HowToBuild
-    # http://cameo54321.blogspot.ru/2014/02/installing-cmake-288-or-higher-on.html
-    # clang 3.1 >= need for ASan Ub12.04 -> 3.0
-    #
-    # !!https://solarianprogrammer.com/2013/01/17/building-clang-libcpp-ubuntu-linux/
-    # Try it! https://github.com/pacs-course/pacs/wiki/Instructions-to-install-clang-3.1-on-ubuntu-12.04.1-and-12.10
-    # http://stackoverflow.com/questions/17657261/how-to-install-clang-pre-built-binaries-ubuntu-12-04
-    # http://sohanikh.blogspot.ru/2013/02/how-to-build-llvm-from-source-on-ubuntu.html
-    add_definitions(  -Wall -g -fsanitize=address)
-    # https://developer.mozilla.org/en-US/docs/Mozilla/Testing/Firefox_and_Address_Sanitizer
     message("I'm clang")
     link_directories(${BigExtern}/boost_1_57_0/stage_gcc/lib)
     link_libraries(tbb tbbmalloc boost_system boost_thread pthread rt)  # !! pthread and rt last!!
@@ -125,7 +97,7 @@ elseif (UNIX)
       ENDIF()
 
       message("I'm NOT ARM processor")
-      link_directories(${BigExtern}/boost_1_57_0/stage_gcc/lib)
+      link_directories(${BigExtern}/boost_1_57_0/stage_x64/lib)
       # how split embedded form just linux
       # http://stackoverflow.com/questions/9534126/automatically-linking-socket-shared-library-in-nix
       # http://stackoverflow.com/questions/14835605/linking-with-gcc-fails-after-switching-boost-version-from-1-52-to-1-53
@@ -221,23 +193,9 @@ set( canarySources ${canaryHttp})
 
 file( GLOB blockedTestSources  ${testsRoot}/*.cc)
 
-# Exec
-# Work dir for all ../war
-# App
-add_executable(${PROJECT_NAME}.bin
-    ${testsRoot}/main_funcs/app_main.cc
-    ${externCode}
-    ${proSources}
-    ${canarySources}
-)
-
-# FIXME: deamon build
-add_executable(deamon-${PROJECT_NAME}.bin
-  ${testsRoot}/main_funcs/deamon_main.cc)
-
 # Warning: run one by one and !in QtCreator only in external terminal!
 add_executable(blocked_tests.bin
-    ${testsRoot}/main_funcs/launcher_tests.cc
+    ${Source}/mains/launcher_tests.cc
     ${GMock}/gmock-gtest-all.cc
     ${externCode}
     ${blockedTestSources}
@@ -246,7 +204,7 @@ add_executable(blocked_tests.bin
 )
 
 add_executable(unittest.bin
-    ${testsRoot}/main_funcs/launcher_tests.cc
+    ${Source}/mains/launcher_tests.cc
     ${GMock}/gmock-gtest-all.cc
     ${unitTests}
     ${externCode}
