--- a/projects/tricks_cc11/CMakeLists.txt
+++ b/projects/tricks_cc11/CMakeLists.txt
@@ -17,19 +17,14 @@ set(unitTests "./tests/unit/")
 set(Source "source/")
 set(testsRoot "./tests")
 set(root ".")
-set(BigExtern "/home/zaqwes/work/big-3rdparty/")
+set(BigExtern "/opt/big-3rdparty/")
 set(Intern "./intern/")
 
 # Test framework
 include_directories(${GMock})
 include_directories(${Source})
-include_directories(${Source}/reuse)
-include_directories(${Extern}/slre-1.3)
 include_directories(${Extern}/loki-0.1.7/include)
 include_directories(${Extern})
-include_directories(${Extern}/mongoose-5.2/)
-include_directories(${Extern}/smash-vx.y-fix/)
-include_directories(${Extern}/jsoncpp-src-0.6.0-rc2/include)
 include_directories(${BigExtern}/boost_1_57_0)
 include_directories(${BigExtern}/asl_1.0.43)
 include_directories(${unitTests})
