tsan not work with boost. clang 3.4

--- a/projects/xsan-pack/tsan_check_templ/CMakeLists.txt
+++ b/projects/xsan-pack/tsan_check_templ/CMakeLists.txt
@@ -36,7 +36,7 @@ if (UNIX)
     #-arch x86_64  # Apple's gcc
     # -Wshorten-64-to-32
     # -march=x86-64 -Wconversion -pedantic -Wextra")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -Wall -std=c++11")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -Wall")# -std=c++11")
 
     # gcc 4.8 ubuntu 12 http://llvm.org/docs/GettingStarted.html#getting-a-modern-host-c-toolchain
     # cmake .. -DCMAKE_CXX_LINK_FLAGS="-Wl,-rpath,$HOME/toolchains/lib64 -L$HOME/toolchains/lib64"
@@ -62,8 +62,11 @@ if (UNIX)
             # https://developer.mozilla.org/en-US/docs/Mozilla/Testing/Firefox_and_Address_Sanitizer
         ENDIF()
         # FIXME: Need toolchain. QtCreator not see it!
-        #link_directories(${BigExtern}/boost_1_57_0/stage_gcc/lib)
-        #link_libraries(tbb tbbmalloc boost_system boost_thread pthread rt)  # !! pthread and rt last!!
+        link_directories(${BigExtern}/boost_1_57_0/clang_libx64/lib)
+        link_libraries(
+            #tbb tbbmalloc
+            boost_system boost_thread
+            pthread rt)  # !! pthread and rt last!!
     else()
         IF(LCB_USE_TSAN)
             # http://stackoverflow.com/questions/16023637/difference-between-pic-vs-pie
@@ -86,10 +89,11 @@ if (UNIX)
         ENDIF()
         # FIXME: -D_REENTRANT
         #link_directories(${BigExtern}/boost_1_57_0/stage_x64/lib)
-        link_libraries(
-            #tbb tbbmalloc boost_system boost_thread
-            tsan
-            pthread rt)  # !! pthread and rt last!!
+        #link_libraries(
+            #tbb tbbmalloc
+        #    boost_system boost_thread
+        #    tsan
+        #    pthread rt)  # !! pthread and rt last!!
     endif()
 endif()
 
