add ASan in GTest! win!

--- a/projects/xsan-pack/asan_check_templ/CMakeLists.txt
+++ b/projects/xsan-pack/asan_check_templ/CMakeLists.txt
@@ -1,8 +1,7 @@
 # -DCMAKE_BUILD_TYPE=Debug
 # -DCMAKE_BUILD_TYPE=Release
 # -DCMAKE_VERBOSE_MAKEFILE=ON
-# -DCMAKE_C_COMPILER=/usr/bin/clang
-# -DCMAKE_CXX_COMPILER=/usr/bin/clang++
+# -DCMAKE_C_COMPILER=/usr/bin/clang -DCMAKE_CXX_COMPILER=/usr/bin/clang++
 #
 # ASan:
 #  https://software.intel.com/en-us/articles/address-sanitizer-asan-tool-to-debug-memory-corruptions-in-chrome-os
@@ -13,55 +12,28 @@
 project(asan-check)
 cmake_minimum_required(VERSION 2.8)
 
-set(Extern "../../extern/")
-set(GMock "../../extern/gmock-1.6.0/fused-src")
-set(Canary "./source/canary/")
-set(Pro "./source/production/")
-set(unitTests "./tests/unit/")
-set(Source "source/")
-set(testsRoot "./tests")
-set(root ".")
-set(BigExtern "/opt/big-3rdparty/")
-set(Intern "./intern/")
-
 # conf
 set (LCB_USE_ASAN Y)
+
+set(Extern "../../../extern/")
+set(GMock "../../../extern/gmock-1.6.0/fused-src")
+set(Source "source/")
+set(testsRoot "./tests")
+set(BigExtern "/opt/big-3rdparty/")
 
 # Test framework
 include_directories(${GMock})
 include_directories(${Source})
-include_directories(${Source}/reuse)
-include_directories(${Extern}/slre-1.3)
 include_directories(${Extern}/loki-0.1.7/include)
 include_directories(${Extern})
-include_directories(${Extern}/mongoose-5.2/)
-include_directories(${Extern}/smash-vx.y-fix/)
-include_directories(${Extern}/jsoncpp-src-0.6.0-rc2/include)
 include_directories(${BigExtern}/boost_1_57_0)
-include_directories(${BigExtern}/asl_1.0.43)
-include_directories(${unitTests})
-
-IF(LCB_USE_VALGRIND)
-    # -pg
-    #SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-omit-frame-pointer -fsanitize=address")
-    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer -fsanitize=address")
-    #SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -undefined dynamic_lookup -fsanitize=address")
-    #SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
-ENDIF()
 
 # ASan,TSan and MSan
 IF(LCB_USE_ASAN)
-    # Static analyser http://clang-analyzer.llvm.org/
-    # https://github.com/couchbase/couchnode/blob/master/deps/lcb/cmake/Modules/GetLibcouchbaseFlags.cmake
-    # http://blogs.perl.org/users/rurban/2011/11/adventures-with-clang-and-asan.html
-    # main: address - thread, memory and ub not work in i686, only x86_64
-    #-fno-omit-frame-pointer -O1 -g
-    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O1 -fsanitize=address")
-    #-fno-omit-frame-pointer -O1
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O1 -fsanitize=address")
-    # -undefined dynamic_lookup
-    SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS}  -fsanitize=address")
-    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
+    # GCC: troubles with symbols
+    #ASAN_SYMBOLIZER_PATH=$(which llvm-symbolizer-3.4)
+    #/usr/bin/llvm-symbolizer-3.4
+
     # TOOLS:
     #
     # https://code.google.com/p/address-sanitizer/wiki/HowToBuild
@@ -72,8 +44,20 @@ IF(LCB_USE_ASAN)
     # Try it! https://github.com/pacs-course/pacs/wiki/Instructions-to-install-clang-3.1-on-ubuntu-12.04.1-and-12.10
     # http://stackoverflow.com/questions/17657261/how-to-install-clang-pre-built-binaries-ubuntu-12-04
     # http://sohanikh.blogspot.ru/2013/02/how-to-build-llvm-from-source-on-ubuntu.html
-    add_definitions(  -Wall -g -fsanitize=address)
+    #add_definitions(  -Wall -g -fsanitize=address)
     # https://developer.mozilla.org/en-US/docs/Mozilla/Testing/Firefox_and_Address_Sanitizer
+
+    # Static analyser http://clang-analyzer.llvm.org/
+    # https://github.com/couchbase/couchnode/blob/master/deps/lcb/cmake/Modules/GetLibcouchbaseFlags.cmake
+    # http://blogs.perl.org/users/rurban/2011/11/adventures-with-clang-and-asan.html
+    # main: address - thread, memory and ub not work in i686, only x86_64
+    #-fno-omit-frame-pointer -O1 -g
+    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fno-omit-frame-pointer -fsanitize=address")
+    #-fno-omit-frame-pointer -O1
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fno-omit-frame-pointer -fsanitize=address")
+    # -undefined dynamic_lookup
+    SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS}  -fsanitize=address")
+    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
 ENDIF()
 
 # link the libraries to the executable
@@ -82,56 +66,33 @@ if (UNIX)
     # http://stackoverflow.com/questions/15610404/gcc-does-not-give-any-warning-when-converting-from-64-bit-to-32-bit
     #-arch x86_64  # Apple's gcc
     # -Wshorten-64-to-32
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -Wall")# -march=x86-64 -Wconversion -pedantic -Wextra")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -Wall")
 
     # gcc 4.8 ubuntu 12 http://llvm.org/docs/GettingStarted.html#getting-a-modern-host-c-toolchain
     # cmake .. -DCMAKE_CXX_LINK_FLAGS="-Wl,-rpath,$HOME/toolchains/lib64 -L$HOME/toolchains/lib64"
     # http://llvm.org/docs/GettingStarted.html#getting-a-modern-host-c-toolchain
 
     if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-        # FIXME: Need toolchain. QtCreator not see it!
         link_directories(${BigExtern}/boost_1_57_0/stage_gcc/lib)
-        link_libraries(tbb tbbmalloc boost_system boost_thread pthread rt)  # !! pthread and rt last!!
+        link_libraries(boost_system boost_thread pthread rt)  # !! pthread and rt last!!
     else()
-        # FIXME: -D_REENTRANT
         link_directories(${BigExtern}/boost_1_57_0/stage_x64/lib)
-        link_libraries(tbb tbbmalloc boost_system boost_thread pthread rt)  # !! pthread and rt last!!
+        link_libraries(boost_system boost_thread pthread rt)  # !! pthread and rt last!!
     endif()
 endif()
 
 message("CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
 
 # Sources
-file( GLOB canaryHttp ${Source}/heart/*.h)
-file( GLOB apple ${Extern}/hypertable-fix/Common/*.cc ${Extern}/hypertable-fix/*.cc)
-
-# unittests
-file( GLOB proTests ${unitTests}/*.cc)
-file( GLOB blockedTestSources  ${testsRoot}/*.cc)
-
-# Pack
-set( unitTests ${mibTest} ${canaryTestHttp} ${proTests} ${testsRtos})
-set( proSources
-    ${proGlue}
-    ${proCommon}
-    ${proFSMs}
-    ${proSNMPTop}
-    ${proInnerReuse}
-    ${proCAgent}
-    ${proWebAccess}
-    ${proCross}
-    ${proInMemoryStorage}
-    ${proJournals})
-
-set( canarySources ${canaryHttp})
+file( GLOB set0 ${Source}/heart/*.h)
+file( GLOB set2
+    ${testsRoot}/*.cc
+    ${testsRoot}/bug_report/*.cc)
 
 add_executable(unittest.bin
     ${Source}/mains/launcher_all.cc
     ${GMock}/gmock-gtest-all.cc
-    ${unitTests}
-    ${externCode}
-    ${proSources}
-    ${blockedTestSources}
-    ${canarySources}
+    ${set0}
+    ${set2}
 )
 
