--- a/bt_and_heap/Makefile
+++ b/bt_and_heap/Makefile
@@ -1,13 +1,13 @@
 all: app.bin
 
 app.bin: main.o heap.o
-	g++ -o app.bin main.o heap.o -ldl
+	g++ -o app.bin main.o heap.o -ldl -lunwind
 
 main.o: main.cc
-	g++ -c main.cc
+	g++ -c -g main.cc
 
 heap.o: heap.c
-	gcc -c heap.c
+	gcc -c -g heap.c
 
 clean:
 	rm *.bin *.o
