WIP: result task template

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,3 +50,4 @@ find_package(GTest REQUIRED)
 add_subdirectory(projects/backtrace_and_heap)
 add_subdirectory(projects/new_cpp)
 add_subdirectory(projects/x64_learn)
+add_subdirectory(projects/performance_matters)
